--- a/xperiences/templates/header.html
+++ b/xperiences/templates/header.html
@@ -5,8 +5,12 @@
 	</a>
 	<div class="header-wrap">
 		<a id="logo" href="/"><span>naanprofit</span></a>
-		<a id="login-btn" class="btn btn-blue" href="#">Login</a>
-		<a id="service-list" class="btn" href="/start">Start selling</a>
+        {% if not user.is_authenticated %}
+		<a id="login-btn" class="btn btn-blue" href="/accounts/login/">Login</a>
+        {% else %}
+        <a id="login-btn" class="btn btn-blue" href="/accounts/logout/">Logout</a>
+        {% endif %}
+		<a id="service-list" class="btn" href="/experiences/add_experience/">Start selling</a>
 	</div>
 	<div class="bottom-border"></div>
 </header>
