--- a/xperiences/experiences/templates/experiences/add_experience.html
+++ b/xperiences/experiences/templates/experiences/add_experience.html
@@ -162,6 +162,9 @@
 					<div class="pad15">
 						<h3>Location</h3>
 						{{ form.use_saved_address }} Use my saved address
+                        {{ form.xp_location }}
+                        <div style='display:none;'><div id='hidden_map'></div></div>
+
 						<p>Or enter a new address</p>
 						<address><!-- html 5 semantic markup -->
 							<div class="row">
