--- a/xperiences/merchants/templates/merchants/merchant_profile.html
+++ b/xperiences/merchants/templates/merchants/merchant_profile.html
@@ -102,7 +102,7 @@
                             </div>
                         </div><!-- close reviewer-details -->    
                     </div><!-- close reviewer-wrap-->
-                    <div id="ratings"><img width: 60px src="/site-media/images/stars.jpg"> | Aug 26, 2009</div><!-- close ratings -->
+                    <div id="ratings"><img width='60px' src="/site-media/images/stars.jpg"> | Aug 26, 2009</div><!-- close ratings -->
                 </div><!-- close reviewer listing -->    
                 <div id="review-body">
                     <p>{{ review.content }}Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend rutrum porta. Integer magna sem, ultricies nec ultricies suscipit, ullamcorper sit amet purus. Sed vulputate dolor in urna varius tempor. Sed elementum molestie elit at pharetra. Suspendisse nec imperdiet turpis. Nam vitae ante urna, sit amet luctus lorem. Integer eu turpis id urna imperdiet tempor sit amet vitae elit. Nullam viverra, arcu eget hendrerit fermentum, turpis odio convallis lectus, ut laoreet nibh ligula vel dolor. Maecenas volutpat cursus dictum. Donec varius lectus et leo auctor faucibus.</p> 
