--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -774,5 +774,14 @@ padding-left: 3em;
 line-height: 1.5em;
 }
 
+.image-wrapper
+{
+    width:50px;
+    height:50px;
+    overflow:hidden;
+    position:relative;
+}
 
-
+.auto_scale_photo
+{
+}
