gettext for date picker

--- a/xperiences/experiences/templates/experiences/add_experience.html
+++ b/xperiences/experiences/templates/experiences/add_experience.html
@@ -34,7 +34,12 @@
     <script type="text/javascript">window.__admin_media_prefix__ = "/static/admin/";</script>
 
     <script type="text/javascript" src="/static/admin/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/admin/jsi18n/"></script>
+    <script type="text/javascript" >
+        function gettext(msgid) {
+            return msgid;
+        }
+
+    </script>
     <script type="text/javascript" src="/static/admin/js/core.js"></script>
     <script type="text/javascript" src="/static/admin/js/admin/RelatedObjectLookups.js"></script>
     <script type="text/javascript" src="/static/admin/js/jquery.init.js"></script>
