--- a/xperiences/experiences/templates/experiences/add_experience.html
+++ b/xperiences/experiences/templates/experiences/add_experience.html
@@ -38,7 +38,31 @@
         function gettext(msgid) {
             return msgid;
         }
+        var formats = new Array();
 
+        formats['DATETIME_FORMAT'] = 'N j, Y, P';
+        formats['DATE_FORMAT'] = 'N j, Y';
+        formats['DECIMAL_SEPARATOR'] = '.';
+        formats['MONTH_DAY_FORMAT'] = 'F j';
+        formats['NUMBER_GROUPING'] = '3';
+        formats['TIME_FORMAT'] = 'P';
+        formats['FIRST_DAY_OF_WEEK'] = '0';
+        formats['TIME_INPUT_FORMATS'] = ['%H:%M:%S', '%H:%M'];
+        formats['THOUSAND_SEPARATOR'] = ',';
+        formats['DATE_INPUT_FORMATS'] = ['%Y-%m-%d', '%m/%d/%Y', '%m/%d/%y'];
+        formats['YEAR_MONTH_FORMAT'] = 'F Y';
+        formats['SHORT_DATE_FORMAT'] = 'm/d/Y';
+        formats['SHORT_DATETIME_FORMAT'] = 'm/d/Y P';
+        formats['DATETIME_INPUT_FORMATS'] = ['%Y-%m-%d %H:%M:%S', '%Y-%m-%d %H:%M', '%Y-%m-%d', '%m/%d/%Y %H:%M:%S', '%m/%d/%Y %H:%M', '%m/%d/%Y', '%m/%d/%y %H:%M:%S', '%m/%d/%y %H:%M', '%m/%d/%y'];
+
+        function get_format(format_type) {
+            var value = formats[format_type];
+            if (typeof(value) == 'undefined') {
+                return msgid;
+            } else {
+                return value;
+            }
+        }
     </script>
     <script type="text/javascript" src="/static/admin/js/core.js"></script>
     <script type="text/javascript" src="/static/admin/js/admin/RelatedObjectLookups.js"></script>
