--- a/xperiences/experiences/templates/experiences/list.html
+++ b/xperiences/experiences/templates/experiences/list.html
@@ -1,5 +1,5 @@
 <!-- THIS IS THE HOME PAGE INDEX.HTML SAVED IN THE EXPERIENCES APP -->
-{% extends "layout.html" %}
+{% extends "base.html" %}
 
 {% load x_tags %}
 
@@ -7,58 +7,62 @@
     <link rel="stylesheet" href="{{ MEDIA_URL }}css/front-page.css" />
 {% endblock %}
 
-{% block body %}
-    <!--<h1>hits: {{ hits }}</h1>-->
-    <div id="front-page">
-        <div class="top-spacer"></div>
-        <div class="space120"></div>
-        <div class="image-grid"></div>
-        <div id="search-box" class="panel dark">
-            <div class="pad15">
-                <form method='GET'>
-                    <span>I want to find</span>
-                    <input class="default span2" id="keywords_field" type="text" alt="activities" name='keywords'/>
-                    <span>near</span>
-                    <input class="default span3" name='address' id="address_field" type="text" placeholder="address or zip code"/>
-                    <input type='hidden' id="lat_field" name='lat' />
-                    <input type='hidden' id="lng_field" name='lng' />
-                    <input class="btn" type="submit" value="Search" />
-                </form>
+{% block content %}
+        <div class="command-bar-container">
+        </div>
+        <div class="two-col-left-narrow-float">
+            <div id="search-left-bar" class="panel dark">
+                <h4>Search results</h4>
+                <input type="text" class="shorter" /> near <input type="text" class="short" />
+
+                <input type="submit" class="margin-top-10" value="search again" />
+            </div>
+            <div id="map-bar" class="panel">
+                This is where the map goes
+            </div>
+            <div id="filter-bar" class="panel">
+                <h4>Filter by</h4>
+                <div><input type="checkbox" name="my_place">Option 1</div>
+                <div><input type="checkbox" name="delivery">Option 2</div>
+                <div><input type="checkbox" name="pick-up">Option 3</div>
             </div>
         </div>
-
-        <div class="clear"></div>
-        {% include "header.html" %}
+        <div class="two-col-right-wide">
+<!--            <h2>There are 32 listings</h2> -->
+            <div class="page-nav">
+                <ul>
+                    <li>&lt;</li>
+                    <li class="active">1</li>
+                    <li>2</li> 
+                    <li>3</li> 
+                    <li>4</li> 
+                    <li>&gt;</li>
+                </ul>
+            </div>
+        </div>
+        <div class="image-grid"></div>
     </div>
-    {% include "footer.html" %}
 
     <div style='display:none;'>
         <script type='text/x_jquery_templates' id='test-template'>
-            <li class="front-page-item">
-                <a href="/experiences/{% t_var slug_id %}">
-                    <img alt=" {% t_var title %} "{% t_if photo1 %}src="{% t_var photo1.url %}"{% t_endif %}/>
-                </a>
-                <div class="thumb-details">
-                    <div class="fp-item-price">
-                        <span class="currency-symbol">$</span>
-                        {% t_var price %}
-                        <span class="currency-code"></span>
-                    </div>
-                    <div class="fp-item-wrapper">
-                        <div class="fp-item-title">
-                            <a title="{% t_var title %}" href="/experiences/{% t_var slug_id %}">{% t_var title %}</a>
-                        </div>
-                        <div class="fp-item-merchant">
-                            <a title="{% t_var merchant.name %}" href="">{% t_var merchant.name %}{% t_if merchant.city %}, {% t_var merchant.city %} {% t_var merchant.state %} {% t_endif %}</a>
-                        </div>
-                    </div>
-                </div>
-            </li>
-        </script>
-
+            <div class="search-result">
+                <img alt=" {% t_var title %} "{% t_if photo1 %}src="{% t_var photo1.url %}"{% t_endif %} />
+                <div class="price">${% t_var price %}</div>
+                <a title="{% t_var title %}" href="/experiences/{% t_var slug_id %}"><h4>{% t_var title %}</h4></a>
+                <a title="{% t_var merchant.name %}" href=""><div class="secondary">{% t_var merchant.name %}{% t_if merchant.city %}, {% t_var merchant.city %} {% t_var merchant.state %} {% t_endif %}</div></a>
+            </div>
+         </script>
     </div>
 {% endblock %}
 
 {% block extra_scripts %}
     <script type='text/javascript' src='{{ MEDIA_URL }}js/front_page.js'></script>
+    <script>
+function render(data) {
+	var tcrw = $(".two-col-right-wide");
+	for (var i = 0; i < data.length; i++) {
+		$("#test-template").tmpl(data[i]).appendTo(tcrw);
+	}
+}
+</script>
 {% endblock %}
