--- a/xperiences/experiences/templates/experiences/list.html
+++ b/xperiences/experiences/templates/experiences/list.html
@@ -13,7 +13,7 @@
         <div class="two-col-left-narrow-float">
             <div id="search-left-bar" class="panel dark">
                 <h4>Search results</h4>
-                <input type="text" class="shorter" /> near <input type="text" class="short" />
+                <input type="text" class="shorter" /> near <input type="text" class="short" id="address_field" />
 
                 <input type="submit" class="margin-top-10" value="search again" />
             </div>
