--- a/xperiences/experiences/templates/experiences/list.html
+++ b/xperiences/experiences/templates/experiences/list.html
@@ -13,18 +13,20 @@
         <div class="two-col-left-narrow-float">
             <div id="search-left-bar" class="panel dark">
                 <h4>Search results</h4>
-                <input type="text" class="shorter" /> near <input type="text" class="short" id="address_field" />
+                <input type="text" class="shorter" id='keywords_field' /> near <input type="text" class="short" id="address_field" />
+                <input type='hidden' id="lat_field" name='lat' />
+                <input type='hidden' id="lng_field" name='lng' />
 
-                <input type="submit" class="margin-top-10" value="search again" />
+                <button class="margin-top-10" onclick='search_again();' >search again</button>
             </div>
             <div id="map-bar" class="panel">
                 This is where the map goes
             </div>
             <div id="filter-bar" class="panel">
                 <h4>Filter by</h4>
-                <div><input type="checkbox" name="my_place">Option 1</div>
-                <div><input type="checkbox" name="delivery">Option 2</div>
-                <div><input type="checkbox" name="pick-up">Option 3</div>
+                {% for category in categories %}
+                <div><input type="checkbox" name="{{ category.id }}" checked='checked'>{{ category }}</div>
+                {% endfor %}
             </div>
         </div>
         <div class="two-col-right-wide">
@@ -59,10 +61,34 @@
     <script type='text/javascript' src='{{ MEDIA_URL }}js/front_page.js'></script>
     <script>
 function render(data) {
-	var tcrw = $(".two-col-right-wide");
+	var tcrw = $(".two-col-right-wide").empty();
 	for (var i = 0; i < data.length; i++) {
 		$("#test-template").tmpl(data[i]).appendTo(tcrw);
 	}
 }
+    function search_again()
+    {
+        var lat = $('#lat_field').val();
+        var lng = $('#lng_field').val();
+        var keywords = $('#keywords_field').val();
+        var categories = '';
+        $('#filter-bar input[type=checkbox]').each(function()
+        {
+           var cb = $(this);
+            if(cb.is(':checked'))
+            {
+                if( categories != '')
+                    categories += ',';
+                categories += cb.attr('name');
+            }
+        });
+        if(categories == '')
+            return;
+        var params = {
+          lat:lat,lng:lng,keywords:keywords,category:categories
+        };
+        get_experiences(params);
+    }
+
 </script>
 {% endblock %}
