--- a/xperiences/merchants/templates/merchants/account.html
+++ b/xperiences/merchants/templates/merchants/account.html
@@ -47,7 +47,7 @@
 				<div class="row">
 								<div class="input-group">
 									<label class="label" for="about">About you</label>
-									<textarea class="span6" name="{{ form.description.name }}" id="about" value="{{ form.description.value }}" style="overflow-x: hidden; overflow-y: hidden; height: 75px;"></textarea>
+									<textarea class="span6" name="{{ form.description.name }}" id="about" value="{{ form.description.value }}" style="overflow-x: hidden; overflow-y: hidden; height: 75px;">{{ form.description.value }}</textarea>
 								</div>
 							</div>
 							<div class="space30"></div>
