merchant experience page

--- a/xperiences/experiences/templates/experiences/add_experience.html
+++ b/xperiences/experiences/templates/experiences/add_experience.html
@@ -249,6 +249,7 @@
 				</div>
 			</fieldset>
 		</div>
+            {{ form.category }}
 		<div class="space30"></div>
 		<input class="btn" type="submit" value="Add listing">
 		</form>
