--- a/xperiences/merchants/templates/merchants/command_bar.html
+++ b/xperiences/merchants/templates/merchants/command_bar.html
@@ -6,7 +6,7 @@
 			<li><a href="/merchants/experiences">View all your listings</a></li>
 			<li><a href="/merchants/inbox">Inbox</a></li>
 			<li><a href="/merchants/account">Account</a></li>
-			<li><a href="/logout">Logout</a></li>
+			<li><a href="/accounts/logout">Logout</a></li>
 		</ul>
 	</div>
 </div>
