Email content transparency + TypeKit improved

--- a/xperiences/templates/email_referral.html
+++ b/xperiences/templates/email_referral.html
@@ -15,7 +15,7 @@
 				<input type="text" class="span8" name='to' />
 			</div>
 			<div class="row">
-				<textarea id="" name="message" rows="5" class="span8" cols="30">Check out this cool website!</textarea>
+				<textarea id="" name="message" rows="5" class="span8" cols="30">{{ message }}</textarea>
 			</div>
 			<div class="row">
 				<input type="submit" class="btn" value="send" />
