--- a/xperiences/experiences/templates/experiences/experience_profile.html
+++ b/xperiences/experiences/templates/experiences/experience_profile.html
@@ -117,24 +117,24 @@
         </div>
         <div id="seller-info" class="panel row">
             <div class="pad15">
-                <h3>{{merchant.name}}</h3>
-                <div class="row">
-                    <div id="merchant-image">
-                        <div class="image-wrapper">
-                            {% if merchant.photo %}
-                                {% thumbnail merchant.photo "450x300" crop="center" as im %}
-                                    <img class="exp-thumbs-img" class='auto_scale_photo' alt="{{ merchant.name }}" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-                                {% endthumbnail %}
-                            {% else %}
-                                <img class='auto_scale_photo' alt="{{ merchant.name }}" src="http://graph.facebook.com/{{ merchant.FB_ID }}/picture/?type=large">
-                            {% endif %}
-                        </div>
-                    </div>
-                    <div id="merchant-address">
-                    {{ merchant.address }}<br />
-                    </div>
-                </div>
-                <a class="btn btn-blue font14" onclick='send_message_dialog("{{ merchant.id }}");'>Contact me</a>
+				<div id="merchant-image">
+					{% if merchant.photo %}
+						{% thumbnail merchant.photo "450x300" crop="center" as im %}
+							<img alt="{{ merchant.name }}" src="{{ im.url }}">
+						{% endthumbnail %}
+					{% else %}
+						<img alt="{{ merchant.name }}" src="http://graph.facebook.com/{{ merchant.FB_ID }}/picture/?type=large">
+					{% endif %}
+				</div>
+				<div id="merchant-details" class="span2">
+					<h4>{{merchant.name}}</h4>
+					<div id="merchant-address">
+						{{ merchant.address }}<br />
+					</div>
+				</div>
+				<div id="merchant-contact">
+					<a class="btn blue font14" onclick='send_message_dialog("{{ merchant.id }}");'>Contact me</a>
+				</div>
             </div><!-- close pad15 -->
         </div><!-- close seller-info -->
         <div class="pad8 panel row">
