--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -16,7 +16,8 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: cronos-pro;
+/* 	font-family: cronos-pro; */
+	font-weight: bold;
 }
 
 .content-body {
@@ -31,7 +32,8 @@ h1, h2, h3, h4, h5, h6 {
 	padding: 10px 0 50px 0;
 }
 
-#command-bar {
+#command-bar .panel {
+	padding: 10px 0 20px;
 }
 
 #command-bar .panel h3 {
@@ -39,17 +41,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #command-bar ul {
-	border-top: 1px solid #dfdfdf;
-	border-bottom: 1px solid #efefef;
 	margin: 0;
+	border-bottom: 1px solid #d9d9d9;
 }
 
 #command-bar ul li a {
 	display: block;
 	padding: 8px 15px;
-	border-top: 1px solid #efefef;
-	border-bottom: 1px solid #dfdfdf;
 	color :#7a7a7a;
+	border-top: 1px solid #d9d9d9;
+	border-collapse: collapse;
 }
 
 #command-bar ul li:hover {
@@ -80,15 +81,14 @@ header {
 	background: #ffaa00;
 	text-align: center;
 	padding: 8px;
-	font-size: 14pt;
+	font-size: 12pt;
 	box-shadow: inset 0px -2px 8px -2px rgba(0, 0, 0, 0.3);
 	z-index: 101;
 }
 
 header .header-wrap {
-	width: 960px;
 	margin: 0 auto;
-	padding: 8px 0;
+	padding: 8px 0px 8px 20px;
 }
 
 header .header-wrap::after {
@@ -327,14 +327,27 @@ footer a:hover {
 #merchant-image {
 	float: left;
 	width: 100px;
+	overflow: hidden;
 }
 
-#merchant-address{
-	float: left;
-	width: 120px;
-	margin-left: 40px;
+#merchant-image img {
+	width: 100px;
 }
 
+#merchant-details {
+	margin-left: 120px;
+}
+
+#merchant-contact {
+	margin: 0 auto 0;
+	padding: 10px 0 0;
+	clear: both;
+	text-align: center;
+}
+
+#merchant-contact .btn {
+	width: 70%;
+}
 
 .share-buttons {
 	margin: 0 0 10px 0;
@@ -352,13 +365,6 @@ footer a:hover {
 	padding: 15px 0px; 
 	border-top: 1px solid #D9D9D9;
 }
-
-#merchant-image .image-wrapper {
-	width:100px;
-	height:100px;
-	position:relative;
-}
-
 #seller-info .btn btn-blue font14 {
 	float: left;
 	margin-bottom: 10px;
@@ -400,7 +406,7 @@ footer a:hover {
 	border-bottom: 1px solid #DFDFDF;
 	width: 620px;
 	background: white;
-	margin-bottom: 30px;
+	margin: -4px 0 10px;
 }
 
 .bottom-pad {
@@ -430,7 +436,9 @@ footer a:hover {
 	width: 70px;
 	height: 70px;
 	cursor: pointer;
-	border: 5px solid white;
+	border-top: 5px solid white;
+	border-bottom: 5px solid white;
+	border-left: 5px solid white;
 }
 
 .primary #exp-thumbs ul {
