--- a/xperiences/merchants/templates/merchants/command_bar.html
+++ b/xperiences/merchants/templates/merchants/command_bar.html
@@ -1,6 +1,6 @@
 <div id="command-bar" class="span3 column">
 	<div class="panel">
-		<h3>Control Panel</h3>
+		<h3>Hi {{ merchant.name }}</h3>
 		<ul>
 			<li><a href="/experiences/add_experience">Add new listing</a></li>
 			<li><a href="/merchants/experiences">View all your listings</a></li>
