Login and logout screen. Updated add experience. Various other tweaks

--- a/xperiences/experiences/templates/experiences/experience_profile.html
+++ b/xperiences/experiences/templates/experiences/experience_profile.html
@@ -13,7 +13,7 @@
 {% block content %}
     <div class="space30"></div>
     <div class="span8 column">
-        <h1>{{ experience.title }}</h1>
+        <h1 class="title">{{ experience.title }}</h1>
 		<div id="img-gallery">
 			<div id="exp-main-image-outer">
 				<div id="exp-main-image"></div>
