--- a/xperiences/socialauth/templates/sign_up.html
+++ b/xperiences/socialauth/templates/sign_up.html
@@ -63,12 +63,27 @@
     </div>
 {% endblock %}
 {% block content %}
-	<div class="space30"></div>
-	<div id="login" class="panel span9">
-		<div id="login-actions">
-			<a href="#" onclick='facebook_onlogin();return false;' class="fb-connect">Login <span class="text-80">with</span> Facebook</a>
+<div class="space60"></div>
+<div id="login" class="span6 center font12">
+	<div class="panel span7 row">
+		<div class="pad15">
+			<h1><span class="title">Welcome,</span> sign in to Naan Profit.</h1>
+			<div class="login-actions">
+				<a href="#" onclick='facebook_onlogin();return false;' class="fb-connect">Login <span class="text-80">with</span> Facebook</a>
+			</div>
 		</div>
 	</div>
+	<div id="login-img" class="panel span7 row">
+	</div>
+	<div class="panel span7 row">
+		<div class="pad15">
+			<p>New to Naan Profit? Connect with us to continue.</p>
+			<div class="login-actions">
+				<a href="#" onclick='facebook_onlogin();return false;' class="fb-connect">Connect <span class="text-80">with</span> Facebook</a>
+			</div>
+		</div>
+	</div>
+</div>
 
     <div id="content" class="clearfix signup">
 
