--- a/xperiences/experiences/templates/experiences/add_experience.html
+++ b/xperiences/experiences/templates/experiences/add_experience.html
@@ -27,7 +27,7 @@
 	});
 </script>
     <!--link rel="stylesheet" type="text/css" href="/static/admin/css/base.css" /-->
-    <link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css" />
+    <!-- link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css" /-->
     <!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="/static/admin/css/ie.css" /><![endif]-->
 
 {% endblock %}
@@ -113,7 +113,7 @@
 			</fieldset>
 			</div>
 	
-			<div class="row">
+			<div id="date-price-row" class="row">
 				<div class="span5">
 					<fieldset class="panel"><div class="pad15">
 							<h3>Available dates and times</h3>
@@ -149,7 +149,7 @@
 							<div>
 								<label>Price</label>
 								<div class="row">
-									<span>$</span><div class="span1-wrapper">{{ form.price }}</div><span>USD</span>
+									<span class="item font12">$</span><div class="span1-wrapper">{{ form.price }}</div><span class="item font12">USD</span>
 								</div>
 							</div>
 						</div>
@@ -238,6 +238,12 @@
 						<div class="span6-wrapper">{{ form.tags }}</div><!-- I need to learn how to do this... -->
 					</div>
 				</div>
+				<div class="row">
+					<div>
+						<label>Category</label>
+						<div class="span4-wrapper">{{ form.category }}</div>
+					</div>
+				</div>
 				{% comment %}
 				{{ form.my_place.label_tag }}
 				{{ form.my_place }}
@@ -249,7 +255,6 @@
 				</div>
 			</fieldset>
 		</div>
-            {{ form.category }}
 		<div class="space30"></div>
 		<input class="btn" type="submit" value="Add listing">
 		</form>
