--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -173,6 +173,10 @@ footer a:hover {
 /*	FORMS AND INPUTS
 /*------------------------------------------------------------------------------*/
 
+#address_field {
+	width: 180px;
+}
+
 
 .search-result {
 	width: 320px;
@@ -247,8 +251,8 @@ footer a:hover {
 /*	EXPERIENCE PROFILE
 /*------------------------------------------------------------------------------*/
 
-
-#action-bar {
+.title {
+	font-family: cronos-pro;
 }
 
 #action-bar .price {
@@ -371,6 +375,9 @@ footer a:hover {
 }
 
 
+#date-price-row .panel {
+	height: 280px;
+}
 
 
 
@@ -590,36 +597,30 @@ a.message-link {
 }
 
 /* Login */
+
 #login {
-	height: 400px;
-	font-size: 20pt;
 	text-align: center;
-	margin: 0 auto;
-	background: white url(../images/bg_table.jpg) no-repeat center bottom;
 }
 
-#login-actions {
-	position: relative;
-	top: 280px;
+#login-img {
+	height: 180px;
+	background: url(../images/login_bg.jpg);
 }
 
-#login-actions .fb-connect::after {
-	content: "";
-	display: block;
-	position: absolute;
-	top: 42px;
-	margin-left: -53px;
-	width: 260px;
-	height: 0px;
-	box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.4);
+#login .title {
+	font-size: 150%;
+}
+
+.login-actions {
+	text-align:center;
 }
 
 .fb-connect {
 	display: inline-block;
 	border: 1px solid #355891;
-	font-size: 17pt;
+	font-size: 15pt;
 	border-radius: 3px;
-	padding: 5px 10px 5px 50px;
+	padding: 5px 30px 5px 50px;
 	color: white;
 	text-decoration: none;
 	background: #617fb3 url(../images/fb-logo.png) no-repeat left;
@@ -631,7 +632,9 @@ a.message-link {
 	text-decoration: none;
 }
 
-
+#logout {
+	text-align: center;
+}
 
 
 /*------------------------------------------------------------------------------*/
