--- a/xperiences/socialauth/templates/logout.html
+++ b/xperiences/socialauth/templates/logout.html
@@ -1,18 +1,16 @@
 {% extends 'base.html' %}
 {% block title %}Logout{% endblock %}
 {% block content %}
-    <form method='get' action='/accounts/login/'>
-    <div id="content" class="clearfix signup">
-
-        <div class="sign-in floatLeft">
-            <h3 class="form-title">Logout</h3>
-                <div class="line clearfix">
-                    <label>You just logged out, come back soon</label>
-                </div>
-            <div class="line clearfix">
-                <input type="submit" value="LOGIN AGAIN"/>
-            </div>
-        </div>
-    </div>
-    </form>
+<div class="space60"></div>
+<div class="center span7">
+	<div id="logout" class="panel row font12">
+		<div class="pad15">
+			<h1>You have logged out successfully!</h1>
+			<a href="/">Return to the home page.</a>
+			<p>If you signed out in error, <a href="/accounts/login/">sign in again</a></p>
+		</div>
+	</div>
+	<div id="login-img" class="panel">
+	</div>
+</div>
 {% endblock %}
