--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -33,7 +33,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #command-bar .panel {
-	padding: 10px 0 20px;
+/*	padding: 45px 0 80px; */
+	padding: 10px 0;
 }
 
 #command-bar .panel h3 {
@@ -177,35 +178,55 @@ footer a:hover {
 	width: 180px;
 }
 
+#search-left-bar {
 
-.search-result {
-	width: 320px;
-	display: inline-block;
-	margin-right: 5px;
 }
 
-.search-result img {
-	width: 320px;
+.search-result {
+	float: left;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	height: 200px;
+}
+
+.search-result .image-wrapper {
+	width: 205px;
+	height: 140px;
+	overflow: hidden;
+}
+
+.search-result .image-wrapper img {
+	width: 215px;
+	margin-left: -5px;
 	border: #E0E0E0;
 	margin: 0 auto;
 }
 
-.search-result h4 {
-	font-size: 14pt;
+.search-result .name {
+	font-size: 12pt;
+	margin-top: 5px;
 	margin-bottom: 2px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	color: #FFAA00;
 }
 
 .search-result .price {
-	width: 34px;  /*This is not enough width to 3 digit numbers*/
-	height: 32px;
-	padding-top: 2px;
-	border-radius: 17px;
-	font-size: 14pt;
-	color: white;
-	text-align: center;
-	background: #0a9aaf;
+	text-align: right;
 	float: right;
-	margin-top: 10px;
+}
+
+.search-result .merchant {
+	width: 70%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	color: #7a7a7a;
+}
+
+.search-result .merchant a {
+	color: #7a7a7a;
 }
 
 .page-nav ul {
@@ -464,33 +485,39 @@ div.activate {
 	float: right;
 }
 
-
-ul.listings li.listing-item {
+#listings {
+	width: 100%;
 }
 
-.listing {
-	display: block;
-	padding: 5px;
-	border-top: 1px solid #dfdfdf;
+#listings tr {
+	border-top: 1px solid #d9d9d9;
 }
 
-.listing-header .listing-value, .listing-header .listing-date {
+#listings th, #listings td {
+	text-align: left;
+	padding: 8px 4px 4px 7px;
+}
+
+#listings th {
 	font-weight: bold;
 }
 
-.listing-date {
-	margin-left: 10px;
-	font-size: 12pt;
+.listing-image {
+	width: 40px;
+	height: 40px;
+	overflow: hidden;
+	float: left;
+	margin-right: 10px;
 }
 
-.listing-value {
-	width: 150px;
-	float: right;
-	font-size: 11pt;
+.listing-image img {
+	width: 50px;
 }
 
-.listing-actions button {
-	margin-left: 10px;
+#listings .btn {
+	padding: 5px;
+	font-size: 8pt;
+	font-weight: bold;
 }
 
 /*------------------------------------------------------------------------------*/
