--- a/xperiences/merchants/templates/merchants/view_message.html
+++ b/xperiences/merchants/templates/merchants/view_message.html
@@ -1,45 +1,44 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="space30"></div>
-{% include "merchants/command_bar.html" %}
+<div class="space60"></div>
 <div id="message-read" class="column span9">
+	<h1 class="title">{{ message.title}}</h1>
 	<div class="panel pad15">
 		{% if not status or status != 'ok' %}
 		{{ status }}
 		<div class="user">
 			{% if message.sender %}
 			<div class="user-details">
-			<div class="image-wrapper" style='width:50px; height:50px; position:relative;'>
-				<img alt="{{ message.sender.name }}" width="50" height="50" src="{% if message.sender.photo %}{{ message.sender.photo.url }}{% else %}http://graph.facebook.com/{{ message.sender.FB_ID }}/picture/?type=large{% endif %}" />
-			</div>
-			<div id="user-data" class="span3">
-				<div class="user-name">
-				{{ message.sender }}
+				<div class="image-wrapper" style='width:50px; height:50px; position:relative;'>
+					<img alt="{{ message.sender.name }}" width="50" height="50" src="{% if message.sender.photo %}{{ message.sender.photo.url }}{% else %}http://graph.facebook.com/{{ message.sender.FB_ID }}/picture/?type=large{% endif %}" />
 				</div>
-				<div class="message-timestamp">
-				{{ message.time }}
+				<div id="user-data" class="span3">
+					<div class="user-name">
+						{{ message.sender }}
+					</div>
+					<div class="message-timestamp">
+						{{ message.time }}
+					</div>
 				</div>
+				<div class="clear"></div>
+				{% endif %}
+				<div class="message-body">
+					{{ message.message }}
+				</div>
+				<div class="space30"></div>
+				<form method='post'>
+					<textarea rows="10" cols="50" name='reply'></textarea>
+					<div class="space10"></div>
+					<input class="btn" type='submit' value='Reply' />
+				</form>
+				{% else %}
+				Sent
+				{% endif %}
 			</div>
-			<div class="clear"></div>
-			{% endif %}
-			<div class="message-title">
-				{{ message.title }}
-			</div>
-			<div class="message-body">
-				{{ message.message }}
-			</div>
-			<div class="space30"></div>
-			<form method='post'>
-				<textarea rows="10" cols="50" name='reply'></textarea>
-				<div class="space10"></div>
-				<input class="btn" type='submit' value='Reply' />
-			</form>
-		{% else %}
-		Sent
-		{% endif %}
 		</div>
 	</div>
 </div>
+{% include "merchants/command_bar.html" %}
 {% endblock %}
 
 
